k8s/env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nibrass-haider-express-sample-app
    app.kubernetes.io/instance: nibrass-haider-express-sample-app-instance
    app.kubernetes.io/name: nibrass-haider-express-sample-app
    app.openshift.io/runtime: js
  name: nibrass-haider-express-sample-app
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: nibrass-haider-express-sample-app-instance
      app.kubernetes.io/name: nibrass-haider-express-sample-app
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: nibrass-haider-express-sample-app-instance
        app.kubernetes.io/name: nibrass-haider-express-sample-app
    spec:
      containers:
        - env:
            - name: INGRESS_HOST
            - name: PROTOCOLS
            - name: LOG_LEVEL
              value: debug
          image: quay.io/nibrass_haider_ibm/express-sample-app:5a439e963abda6c910a77b1293a080a084a35d95
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: nibrass-haider-express-sample-app
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nibrass-haider-express-sample-app
    app.kubernetes.io/instance: nibrass-haider-express-sample-app-instance
    app.kubernetes.io/name: nibrass-haider-express-sample-app
  name: nibrass-haider-express-sample-app
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/instance: nibrass-haider-express-sample-app-instance
    app.kubernetes.io/name: nibrass-haider-express-sample-app
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Validate=false
    openshift.io/host.generated: "true"
  name: express-sample-app
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: express-sample-app
    weight: 100
  wildcardPolicy: None
